--- a/env_templates/worker.env.example
+++ b/env_templates/worker.env.example
@@ -1,14 +1,29 @@
+###############################################
+# HIVE SYNC — WORKER ENVIRONMENT TEMPLATE
+###############################################
+
 # -------------------------------------
 # Worker Service Configuration
 # -------------------------------------
 WORKER_CONCURRENCY=4
 LOG_LEVEL=info
 
+# A unique worker identifier (optional but recommended)
+WORKER_ID=worker-1
+
 # -------------------------------------
 # Redis (Job Queue)
 # -------------------------------------
 REDIS_HOST=redis
 REDIS_PORT=6379
+
+# -------------------------------------
+# Worker Queue Names (MUST MATCH BACKEND)
+# -------------------------------------
+WORKER_PREVIEW_QUEUE=preview_tasks
+WORKER_MAP_QUEUE=map_tasks
+WORKER_BILLING_QUEUE=billing_tasks
+WORKER_DELETION_QUEUE=deletion_tasks
 
 # -------------------------------------
 # Object Storage (Cloudflare R2)
@@ -32,10 +47,35 @@ LOCAL_AI_ENABLED=false
 LOCAL_AI_MODEL_PATH=/models/llama
 
 # -------------------------------------
-# Preview Pipeline
+# Preview Pipeline (Section 12)
 # -------------------------------------
 PREVIEW_MAX_TIMEOUT_MS=8000
 
-# Callback URL & HMAC for reporting job results back to backend
+# For validating device context payload (required for Section 12 enhancements)
+# Stateless preview token verification (must match backend)
+PREVIEW_TOKEN_SECRET=REPLACE_ME_WITH_LONG_RANDOM_STRING
+PREVIEW_DEVICE_CONTEXT_SECRET=REPLACE_ME
+
+
+
+# Enable/disable sensor-driven preview behavior
+PREVIEW_SENSOR_FEATURES_ENABLED=true
+EVENTFLOW_ENABLED=true
+
+# -------------------------------------
+# Worker Callback (Backend Integration)
+# -------------------------------------
 WORKER_CALLBACK_URL=https://your-domain.com/api/v1/worker/callback
 WORKER_CALLBACK_SECRET=REPLACE_ME_WITH_LONG_RANDOM_STRING
+
+# -------------------------------------
+# Billing / LemonSqueezy (Worker-Safe)
+# Used only for billing reconciliation jobs and webhook verification
+# -------------------------------------
+LZ_API_KEY=REPLACE_ME
+LZ_WEBHOOK_SECRET=REPLACE_ME
+
+# -------------------------------------
+# Logging / Observability
+# -------------------------------------
+SENTRY_DSN=
