--- a/env_templates/backend.env.example
+++ b/env_templates/backend.env.example
@@ -61,7 +61,26 @@ EVENTFLOW_ENABLED=true
 PREVIEW_MAX_TIMEOUT_MS=8000
 
 # Preview worker callback
-WORKER_CALLBACK_URL=https://your-domain.com/api/v1/worker/callback
+WORKER_CALLBACK_URL=https://your-domain.com/api/v1/workers/callback
+
+# -------------------------------------
+# Rate Limits & Operational Thresholds
+# -------------------------------------
+
+# API rate limiting
+API_RATE_LIMIT_PER_MINUTE=120
+API_RATE_LIMIT_BURST=60
+
+# Worker behavior
+WORKER_MAX_RETRIES=5
+WORKER_RETRY_BACKOFF_MS=500
+
+# Artifact & upload limits
+MAX_ARTIFACT_BYTES=52428800
+MAX_UPLOAD_BYTES=52428800
+
+# Preview concurrency limits
+MAX_PREVIEW_SESSIONS_PER_USER=3
 
 # -------------------------------------
 # Object Storage (Cloudflare R2)
