--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,30 @@
+version: "3.9"
+
 services:
   api:
-    build:
-      context: .
-      dockerfile: backend/Dockerfile
+    build: .
     env_file:
       - backend.env
     ports:
       - "4000:4000"
+
     depends_on:
       - postgres
       - redis
+
   postgres:
-    image: postgres:16
+    image: postgres:15
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-hivesync}
-      POSTGRES_USER: ${POSTGRES_USER:-hivesync}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-REPLACE_ME}
+      POSTGRES_DB: hivesync
+      POSTGRES_USER: hivesync
+      POSTGRES_PASSWORD: 123!Gyndak
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-    volumes:
-      - pgdata:/var/lib/postgresql/data
+
   redis:
     image: redis:7
-    ports:
-      - "6379:6379"
-
-  preview_worker:
-    build:
-      context: backend/preview_workers
-    env_file:
-      - worker.env
-    depends_on:
-      - redis
-      - postgres
-      
-  ai_worker:
-    build:
-      context: backend/ai_workers
-    env_file:
-      - worker.env
-    depends_on:
-      - postgres
-      - redis
-
 
 volumes:
-  pgdata:
-
+  postgres_data:
