--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 
 fastapi==0.115.6
 uvicorn[standard]==0.32.1
-pydantic==2.10.3
+pydantic[email]==2.10.3
 pydantic-settings==2.6.1
 SQLAlchemy==2.0.36
 asyncpg==0.30.0
